--- a/views/public/html/Evaluation-GalleyOfficersForm.html
+++ b/views/public/html/Evaluation-GalleyOfficersForm.html
@@ -187,7 +187,7 @@
 
             </div>
 
-            <div class="card mb-3 ">
+            <div class="card mb-3 " style="display: none;">
                 <div class="card-header  ">
                 <h5>TRADE AREA EXPERIENCE (indicate number of contracts)</h5>
               </div>
@@ -233,7 +233,7 @@
 
   <div class="container">
   <div class="row ">
-    <div class="col-md-7">
+    <div class="col-md-7" style="display: none;">
       <div class="card mb-4">
         <div class="card-header bg-light">
           <h5 class="mb-0">
@@ -333,7 +333,7 @@ Number of Contracts in Ranks
 </div>
 <div class="row ">
     <div class="col-5 border pt-3">
-Type or size of the vessels served    </div>
+Type or size of the vessels served <br/>(Mention TEU for containers)   </div>
     <div class="col border p-2">
        <input class="form-control" readonly id="psInput2">
     </div>
