--- a/views/public/html/Evaluation-EngineOfficer.html
+++ b/views/public/html/Evaluation-EngineOfficer.html
@@ -209,7 +209,7 @@
         </div>
 
         <div class="row mb-3">
-          <div class="col-md-6">
+          <div class="col-md-5">
             <div class="card">
               <div class="card-header">Communication</div>
               <div class="card-body">
@@ -248,7 +248,7 @@
               </div>
             </div>
           </div>
-          <div class="col-2 text-center card bg-gray-200 bg-light">
+          <div class="col-md-2 text-center card bg-gray-200 bg-light">
             <p class="bg-gray-200 mt-2">BMI</p>
 
             <input
@@ -257,9 +257,38 @@
               class="form-control border"
             />
           </div>
+          <div class="col-md-4  card bg-gray-200 bg-light" style="margin-left: 15px;">
+           
+               
+              <div class="bg-light p-2">
+                <div class="mb-2">
+                  <label class="form-label me-4">Drinking Habits</label>
+                  <div class="form-check form-check-inline p ">
+                    <input class="form-check-input" type="radio" name="drinkingHabits" id="drinkingYes">
+                    <label class="form-check-label " for="drinkingYes ">YES</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="drinkingHabits" id="drinkingNo">
+                    <label class="form-check-label" for="drinkingNo">NO</label>
+                  </div>
+                </div>
+                <div>
+                  <label class="form-label ">Any Medical issues</label>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="medicalIssues" id="medicalYes">
+                    <label class="form-check-label" for="medicalYes">YES</label>
+                  </div>
+                  <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="medicalIssues" id="medicalNo">
+                    <label class="form-check-label" for="medicalNo">NO</label>
+                  </div>
+                </div>
+              </div>
+         
+          </div>
         </div>
 
-        <div class="card mb-3">
+        <div class="card mb-3" style="display: none;">
           <div class="card-header">
             TRADE AREA EXPERIENCE (indicate number of contracts)
           </div>
@@ -313,7 +342,7 @@
 
 
       <div class="container mt-4 mb-4 p-2">
-        <div class="card mb-4">
+        <div class="card mb-4" style="display: none;">
           <div class="card-header bg-light">
             <h5 class="mb-0">
               MULTINATIONAL CREW EXPERIENCE (tick the appropriate box)
@@ -359,7 +388,7 @@
           </div>
         </div>
 
-        <div class="row mb-4">
+        <div class="row mb-4" style="display: none;">
           <div class="col-md-6">
             <div class="card">
               <div class="border border-black-1 ">
@@ -388,11 +417,11 @@
         </div>
 
         
-  <div class="container">
+  <div class="container" style="display: none;">
     <div class="row mb-3">
    <div class="container">
   <div class="row ">
-    <div class="col-md-6 ">
+    <div class="col-md-6 " >
      <div class="row">
     <div class="col">
       <div class="border border-black-1">
@@ -477,34 +506,7 @@
 
 
         
-        <div class="row  p-4">
-          <div class="col-md-6 border border-black-1">
-        <div class="bg-light p-2">
-          <div class="mb-2">
-            <label class="form-label me-4 ">Drinking Habits</label>
-            <div class="form-check form-check-inline p ">
-              <input class="form-check-input" type="radio" name="drinkingHabits" id="drinkingYes">
-              <label class="form-check-label " for="drinkingYes ">YES</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="drinkingHabits" id="drinkingNo">
-              <label class="form-check-label" for="drinkingNo">NO</label>
-            </div>
-          </div>
-          <div>
-            <label class="form-label ">Any Medical issues</label>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="medicalIssues" id="medicalYes">
-              <label class="form-check-label" for="medicalYes">YES</label>
-            </div>
-            <div class="form-check form-check-inline">
-              <input class="form-check-input" type="radio" name="medicalIssues" id="medicalNo">
-              <label class="form-check-label" for="medicalNo">NO</label>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+       
       </div>
 
 
@@ -521,7 +523,7 @@ Number of Contracts in Ranks
 </div>
 <div class="row ">
     <div class="col-5 border pt-3">
-Type or size of the vessels served    </div>
+Type or size of the vessels served    <br/>(Mention TEU for containers)</div>
     <div class="col border p-2">
        <input class="form-control" id="vesselServed" type="text">
     </div>
