--- a/views/public/html/Evaluation-OfficersDeck.html
+++ b/views/public/html/Evaluation-OfficersDeck.html
@@ -185,7 +185,7 @@
                 </div>
 
                 <div class="row mb-3">
-                    <div class="col-md-6">
+                    <div class="col-md-5">
                         <div class="card">
                             <div class="card-header">Communication</div>
                             <div class="card-body">
@@ -207,15 +207,45 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-2 text-center card bg-gray-200 bg-light">
+                    <div class="col-md-2 text-center card bg-gray-200 bg-light">
                         <h4 class="bg-gray-200 mt-3">BMI</h4>
 
                         <input type="text" id="vessel1" name="vessel1" class="form-control border" />
                     </div>
+                    <div class="col-md-4 card bg-gray-200 bg-light" style="margin-left: 15px;">
+                        <div class="bg-light p-2">
+                            <div class="mb-2">
+                                <label class="form-label me-4">Drinking Habits</label>
+                                <div class="form-check form-check-inline p">
+                                    <input class="form-check-input" type="radio" name="drinkingHabits"
+                                        id="drinkingYes" />
+                                    <label class="form-check-label" for="drinkingYes ">YES</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="drinkingHabits"
+                                        id="drinkingNo" />
+                                    <label class="form-check-label" for="drinkingNo">NO</label>
+                                </div>
+                            </div>
+                            <div>
+                                <label class="form-label">Any Medical issues</label>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="medicalIssues"
+                                        id="medicalYes" />
+                                    <label class="form-check-label" for="medicalYes">YES</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="medicalIssues"
+                                        id="medicalNo" />
+                                    <label class="form-check-label" for="medicalNo">NO</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </form>
 
-            <div class="card mb-4">
+            <div class="card mb-4" style="display: none;">
                 <div class="card-header bg-light">
                     <h5 class="mb-0">
                         MULTINATIONAL CREW EXPERIENCE (tick the appropriate box)
@@ -250,7 +280,7 @@
                             <div class="col-md-6">
                                 <div class="row">
                                     <div class="card mb-3">
-                                        <div class="card-header">
+                                        <div class="card-header" style="display: none;">
                                             <h5>
                                                 TRADE AREA EXPERIENCE (indicate number of contracts)
                                             </h5>
@@ -283,7 +313,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div>
+                                        <div style="display: none;">
                                             <div class="border border-black-1">
                                                 <div class="bg-light p-4">
                                                     <h5 class="form-label">
@@ -368,7 +398,7 @@
                             </div>
 
                             <div class="col-md-6 p-3 border border-black-1">
-                                <div class="row mb-1">
+                                <div class="row mb-1" style="display: none;">
                                     <div class="col-md-12 mb-1">
                                         <div class="border border-black-1">
                                             <div class="bg-light p-3">
@@ -389,34 +419,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="bg-light p-2">
-                                    <div class="mb-2">
-                                        <label class="form-label me-4">Drinking Habits</label>
-                                        <div class="form-check form-check-inline p">
-                                            <input class="form-check-input" type="radio" name="drinkingHabits"
-                                                id="drinkingYes" />
-                                            <label class="form-check-label" for="drinkingYes ">YES</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="drinkingHabits"
-                                                id="drinkingNo" />
-                                            <label class="form-check-label" for="drinkingNo">NO</label>
-                                        </div>
-                                    </div>
-                                    <div>
-                                        <label class="form-label">Any Medical issues</label>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="medicalIssues"
-                                                id="medicalYes" />
-                                            <label class="form-check-label" for="medicalYes">YES</label>
-                                        </div>
-                                        <div class="form-check form-check-inline">
-                                            <input class="form-check-input" type="radio" name="medicalIssues"
-                                                id="medicalNo" />
-                                            <label class="form-check-label" for="medicalNo">NO</label>
-                                        </div>
-                                    </div>
-                                </div>
+                                
                             </div>
                         </div>
                     </div>
@@ -434,7 +437,7 @@
                     </div>
                     <div class="row">
                         <div class="col-5 border pt-3">
-                            Type or size of the vessels served
+                            Type or size of the vessels served<br/>(Mention TEU for containers)
                         </div>
                         <div class="col border p-2">
                             <input class="form-control" type="text" id="psInput2" />
