--- a/views/public/html/Evaluation-OfficersDeckForm.html
+++ b/views/public/html/Evaluation-OfficersDeckForm.html
@@ -215,7 +215,7 @@
                             <input type="text" id="vessel1" name="vessel1" class="form-control border" />
                         </div>
                     </div>
-                    <div class="card mb-3">
+                    <div class="card mb-3" style="display: none;">
                         <div class="card-header">
                             <h5>TRADE AREA EXPERIENCE (indicate number of contracts)</h5>
                         </div>
@@ -254,7 +254,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card mb-4">
+                    <div class="card mb-4" style="display: none;">
                         <div class="card-header bg-light">
                             <h5 class="mb-0">
                                 MULTINATIONAL CREW EXPERIENCE (tick the appropriate box)
@@ -281,7 +281,7 @@
                         </div>
                     </div>
                     <div class="row mb-3">
-                        <div class="col-md-6 mb-5">
+                        <div class="col-md-6 mb-5" style="display: none;">
                             <div class="border border-black-1">
                                 <div class="bg-light p-3">
                                     <h5 for="cargosHandled" class="form-label">
@@ -310,7 +310,7 @@
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="border border-black-1">
+                            <div class="border border-black-1" style="display: none;">
                                 <div class="bg-light p-3">
                                     <h5 for="automationExperience" class="form-label">
                                         AUTOMATION EXPERIENCE (indicate number of vessels)
@@ -352,7 +352,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row mb-3">
+                    <div class="row mb-3" style="display: none;">
                         <div class="col-md-12">
                             <div class="row">
                                 <div class="col">
@@ -418,7 +418,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-5 border pt-3">
-                                    Type or size of the vessels served
+                                    Type or size of the vessels served<br/>(Mention TEU for containers)
                                 </div>
                                 <div class="col border p-2">
                                     <input class="form-control" type="text" id="psInput2" />
