--- a/views/public/html/Evaluation-OfficersEngineForm.html
+++ b/views/public/html/Evaluation-OfficersEngineForm.html
@@ -225,7 +225,7 @@
                 </div>
             </div>
        
-          <div class="card mb-4">
+          <div class="card mb-4"  style="display: none;">
           <div class="card-header bg-light">
             <h5 class="mb-0">
               MULTINATIONAL CREW EXPERIENCE (tick the appropriate box)
@@ -274,7 +274,7 @@
           </div>
         </div>
 
-        <div class=" mt-4">
+        <div class=" mt-4" style="display: none;">
   <form>
     <div class="row mb-3">
       <div class="col-md-6 mb-5">
@@ -300,7 +300,7 @@
 
 
 
-  <div class="mt-4">
+  <div class="mt-4" style="display: none;">
     <div class="row mb-3">
    <div class="container">
   <div class="row ">
@@ -410,7 +410,7 @@
 
   <div class="">
   <div class="row ">
-      <div class="col-md-6 mb-3">
+      <div class="col-md-6 mb-3" style="display: none;">
       <div class="border border-black-1">
         <div class="bg-light pt-3 p-3">
           <h5 class="form-label">TRADE AREA EXPERIENCE (indicate number of contracts)</h5>
@@ -444,7 +444,7 @@
       </div>
     </div>
 
-    <div class="col-md-6 mb-3">
+    <div class="col-md-6 mb-3" style="display: none;">
       <div class="border border-black-1">
         <div class="bg-light pt-3 p-3 mb-4">
           <h5 class="form-label">TYPES OF CARGO GEARS PREVIOUSLY WORKED WITH:</h5>
@@ -510,7 +510,7 @@
     </div>
     <div class="row ">
         <div class="col-5 border pt-3">
-    Type or size of the vessels served    </div>
+    Type or size of the vessels served  <br/>(Mention TEU for containers)  </div>
         <div class="col border p-2">
            <input class="form-control" type="text" id="psInput2">
         </div>
