--- a/views/public/html/purchase-order.html
+++ b/views/public/html/purchase-order.html
@@ -123,9 +123,9 @@
                       <select class="form-select" id="branch" name="branch" onchange="removeSelectError('branch')"></select>
                     </div>
                     <div class="col-md-3 sel-potype">
-                      <label for="company_management" class="col-form-label">Type</label>
+                      <label for="company_management" class="col-form-label">PO RAISED BY</label>
                       <select class="form-select" id="potype" name="potype" onchange="removeSelectError('potype')">
-                        <option value="">Select Type</option>
+                        <option value="">Select PO RAISED BY</option>
                         <option value="Nautilus">Nautilus</option>
                         <option value="Owners">Owners</option>
                       </select>
