create contract validate documents

--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -1194,7 +1194,7 @@
 
     <!-- Main JS -->
     <script src="../assets/js/main.js"></script>
-    <script src ="./add-c-contract.js"></script>
+    <script src ="./add-c-contract.js?v=1"></script>
     <!-- Page JS -->
     <script src="../assets/js/pages-account-settings-account.js"></script>
 
