resolve currency issue

--- a/views/public/html/purchase-order-form.html
+++ b/views/public/html/purchase-order-form.html
@@ -241,7 +241,7 @@
                               <td class="right-align"><input type="text" class="form-control" onkeyup="changeAmount(this)" id="other_amount" placeholder="Rate" /></td>
                             </tr>
                             <tr>
-                              <td colspan="7" class="right-align"><b>Total Amount INR</b></td>
+                              <td colspan="7" class="right-align"><b>Total Amount <span id="currency_disply"></span></b></td>
                               <td class="right-align" id="grand_total"></td>
                             </tr>
                           </tfoot>
