--- a/views/public/html/purchase-order.html
+++ b/views/public/html/purchase-order.html
@@ -103,7 +103,8 @@
           <!-- / Navbar -->
 
           <!-- Content wrapper -->
-          <div class="container-fluid" id="settingsContainer">
+           <div id="settingsContainer"></div>
+          <div class="container-fluid" >
             <div class="content-wrapper card mt-3 container-fluid rounded-3">
               <div class="w-100 mt-3">
                 <div id="breadcrumbs">
@@ -169,7 +170,9 @@
               </div>
             </div>
           </div>
+          <div style="display: none;">
           <div class="mt-5 p-5 text-center" id="settingsCard" style="display: none"></div>
+          </div>
 
           <!-- /Account -->
           <!-- / Content -->
