--- a/views/public/html/purchase-order-form.html
+++ b/views/public/html/purchase-order-form.html
@@ -133,7 +133,8 @@
           <!-- / Navbar -->
 
           <!-- Content wrapper -->
-          <div class="container" id="settingsContainer">
+           <div id="settingsContainer"></div>
+          <div class="container" >
             <div class="content-wrapper">
               <!-- Content -->
               <div class="w-100 mt-3">
