--- a/views/public/html/purchase-order-form.html
+++ b/views/public/html/purchase-order-form.html
@@ -211,6 +211,10 @@
                               <td class="right-align" id="subTotal"></td>
                             </tr>
                             <tr>
+                              <td colspan="2" class="right-align"><b>Note</b></td>
+                              <td colspan="6"><input type="text" class="form-control" id="poNote"    placeholder="Note" /></td>
+                            </tr>
+                            <tr>
                               <td colspan="7" class="right-align"><b>Less discount</b></td>
                               <td class="right-align"><input type="text" class="form-control" id="LessDiscount"   onkeyup="changeAmount(this)"  placeholder="Rate" /></td>
                             </tr>
