--- a/views/public/html/purchase-order-form.html
+++ b/views/public/html/purchase-order-form.html
@@ -204,6 +204,7 @@
                               <th style="width: 150px">Tax(%)</th>
                               <th style="width: 150px">Tax Amount</th>
                               <th style="width: 100px">Total</th>
+                              <th style="width: 100px"></th>
                             </tr>
                           </thead>
                           <tbody id="po-item"></tbody>
