--- a/views/public/html/purchase-order.html
+++ b/views/public/html/purchase-order.html
@@ -168,8 +168,8 @@
                         <th scope="col" style="font-size: 8px">Vendor</th>
                         <th scope="col" style="font-size: 8px">Vessel</th>
                         <th scope="col" style="font-size: 8px">Total</th>
-                        <th scope="col" style="font-size: 8px">Invoice</th>
-                        <th scope="col" style="font-size: 8px">Action</th>
+                        <th scope="col" style="font-size: 8px">PO</th>
+                        <th scope="col" style="font-size: 8px">Invoice</th>                        
                       </tr>
                     </thead>
                     <tbody id="po-list"></tbody>
